@@ -1,11 +1,11 @@
+from six import print_
 
-s = """The Zen of Python Vector Data Processing, by Sean Gillies
+print_(
+"""The Zen of Python Vector Data Processing, by Sean Gillies
 
 Files are just files.
 A record that's read stays read.
 Objects are good, but data is better.
 Record types aren't special enough to break the rules.
-Functional programming is a great idea -- let's do more of that!"""
-
-print s
+Functional programming is a great idea -- let's do more of that!""")
 
